--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   csv: ^4.0.3
   dio: ^3.0.10
   archive: ^2.0.13
+  angular_modern_charts: ^0.2.0
+  facebook_web_sdk: ^0.0.9
 
 dev_dependencies:
   angular_test: ^2.3.1
