--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,15 +13,12 @@ dependencies:
   stream_transform: ^0.0.19
   angular_components: ^1.0.1
   emojis: ^0.9.3
-  #csv: ^4.0.3
-  #dio: ^3.0.10
   archive: ^2.0.13
   angular_modern_charts: ^0.2.0
   facebook_web_sdk: ^0.0.9
   # essential_components: ^1.9.18
-  #client_cookie: ^2.2.1
-  #dotenv: ^2.0.0
-  #envify: ^1.0.6
+  shelf: ^0.7.9
+  http_server: ^0.9.8+3
 
 dev_dependencies:
   angular_test: ^2.3.1
@@ -30,4 +27,3 @@ dev_dependencies:
   build_web_compilers: ^2.1.0
   test: ^1.6.4
   sass_builder: ^2.0.0
-  #envify_generator: any
