--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   angular_modern_charts: ^0.2.0
   angel_static: ^2.0.0-alpha
   websok: ^2.1.2
+  chartjs: ^0.5.2
 
 dev_dependencies:
   angular_test: ^2.3.1
