--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,6 +19,11 @@ before_script:
 test:
   stage: test
   script:
+    - pub global activate webdev
+
+build:
+  stage: build
+  script:
     - webdev build
 
 development:
